2004-08-21 Alain Magloire

	Fix for 69756
	* plugin.xml

2004-08-20 Chris Wiebe

	class wizard now adds include paths dynamically
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardPage.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardMessages.properties
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCodeGenerator.java

2004-08-19 Alain Magloire

	Match the changing API of the Resolver Model.

	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPreferenceBlock.java
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPropertyPage.java

2004-08-19 Alain Magloire

	Show the right icons for non-C-Resources.
	* src/org/eclipse/cdt/internal/ui/CElementImageProvider.java

2004-08-19 Chris Wiebe

	improved file validation
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardPage.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardMessages.properties
	
2004-08-18 Chris Wiebe

	added source/header file selection dialog
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardPage.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCodeGenerator.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardMessages.properties
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/SourceFileSelectionDialog.java

2004-08-16 Chris Wiebe

	better handling of source folders in class wizard
	* src/org/eclipse/cdt/internal/corext/util/CModelUtil.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardPage.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardMessages.properties

2004-08-16 Tanya Wolff
	Fix for 70906: Duplicate entries in C/C++ preferences
	
	src/org.eclipse.cdt.internal.ui.preferences/CeditorHoverConfigurationBlock.java
